--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,10 @@
 # --- 应用设置 ---
 app:
-  # 这一行是新加的“修复补丁”，它现在需要这个
+  # 修复 Bug #1
   version_check_url: 'https://raw.githubusercontent.com/sansan0/TrendRadar/main/version'
-  
+  # 修复 Bug #2 (我们就设为 true 吧)
+  show_version_update: true 
+
   # 告诉机器人，我们要监控这7个平台
   platforms:
     - douyin
@@ -19,7 +21,6 @@ notify:
   feishu:
     enabled: true
     webhooks:
-      # 你的飞书钥匙（它们还在“秘密地点”，不用动）
       - url: '${{ secrets.FEISHU_WEBHOOK }}'
         secret: '${{ secrets.FEISHU_SECRET }}'
 
